--- a/NZWalks.Web/Views/Regions/Index.cshtml
+++ b/NZWalks.Web/Views/Regions/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <h1 class="mt-3">Regions</h1>
+<div class="d-flex justify-content-end">
+    <a class="btn btn-primary" asp-area="" asp-controller="Regions" asp-action="Add">Add Region</a>
+</div>
 
 <table class="table table-bordered">
     <thead>
