--- a/NZWalks.Web/Views/_ViewImports.cshtml
+++ b/NZWalks.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using NZWalks.Web
-@using NZWalks.Web.Models
+﻿@using NZWalks.UI
+@using NZWalks.UI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
