--- a/NZWalks.Web/Views/Regions/Edit.cshtml
+++ b/NZWalks.Web/Views/Regions/Edit.cshtml
@@ -4,10 +4,10 @@
 
 @if (Model is not null)
 {
-    <form method="post" class="mt-3">
+    <form method="post">
         <div class="mt-3">
             <label class="form-label">Id</label>
-            <input type="text" class="form-control" asp-for="Id" readonly/>
+            <input type="text" class="form-control" asp-for="Id" readonly />
         </div>
 
         <div class="mt-3">
@@ -25,8 +25,15 @@
             <input type="text" class="form-control" asp-for="RegionImageUrl" />
         </div>
 
-        <div class="mt-3">
+        <div class="mt-3 d-flex justify-content-between">
             <button type="submit" class="btn btn-primary">Save</button>
+
+            <button type="submit" asp-controller="Regions"
+                    asp-action="Delete"
+                    class="btn btn-danger">
+                Delete
+            </button>
         </div>
+
     </form>
 }
